Update 455. Assign Cookies.md

--- a/455. Assign Cookies.md
+++ b/455. Assign Cookies.md
@@ -42,6 +42,8 @@ Constraints:
 
 ```csharp
 
+MySolution:
+
 public class Solution {
     public int FindContentChildren(int[] g, int[] s) {
       Array.Sort(g);
