Update 2553. Separate the Digits in an Array.md

--- a/2553. Separate the Digits in an Array.md
+++ b/2553. Separate the Digits in an Array.md
@@ -42,7 +42,9 @@ Constraints:
 
 1 <= nums[i] <= 105
 
-```
+```csharp
+
+MySolution:
 
 public class Solution {
     public int[] SeparateDigits(int[] nums) {
