--- a/2600. K Items With the Maximum Sum.md
+++ b/2600. K Items With the Maximum Sum.md
@@ -16,7 +16,7 @@ We want to pick exactly k items among the available items. Return the maximum po
 
  
 
-Example 1:
+### Example 1:
 
 Input: numOnes = 3, numZeros = 2, numNegOnes = 0, k = 2
 
@@ -25,7 +25,7 @@ Output: 2
 Explanation: We have a bag of items with numbers written on them {1, 1, 1, 0, 0}. We take 2 items with 1 written on them and get a sum in a total of 2.
 It can be proven that 2 is the maximum possible sum.
 
-Example 2:
+### Example 2:
 
 Input: numOnes = 3, numZeros = 2, numNegOnes = 0, k = 4
 
