--- a/268. Missing Number.md
+++ b/268. Missing Number.md
@@ -39,27 +39,7 @@ All the numbers of nums are unique.
 
 ```csharp
 
-My Solution:
-
-public class Solution
-{
-    public int MissingNumber(int[] nums)
-    {
-        int n = nums.Length;
-        Array.Sort(nums);
-        for (int i = 0; i < n; i++)
-        {
-            if (i != nums[i])
-            {
-                return i;
-            }
-        }
-        return n;
-    }
-}
-
-
-Better Solution:
+Solution:
 
 public class Solution 
 {
