Update 287. Find the Duplicate Number.md

--- a/287. Find the Duplicate Number.md
+++ b/287. Find the Duplicate Number.md
@@ -43,7 +43,7 @@ Can you solve the problem in linear runtime complexity?
 
 ```csharp
 
-//it is not my solution,it is a better solution
+//it is not my solution,but it is a better solution
 
 Solution:
 
