Update 344. Reverse String.md

--- a/344. Reverse String.md
+++ b/344. Reverse String.md
@@ -30,15 +30,34 @@ s[i] is a printable ascii character.
 
 My Solution:
 
-
-public class Solution {
-    public void ReverseString(char[] s) {
-           char temp;
-        for(int i=0;i<s.Length/2;i++){
-           temp=s[i];
-           s[i]=s[s.Length-i-1];
-           s[s.Length-i-1]=temp;
+public class Solution
+{
+    public string ReverseVowels(string s)
+    {
+        char[] vowels = { 'a', 'e', 'i', 'o', 'u', 'A', 'E', 'O', 'U', 'I' };
+        char[] c = s.ToCharArray();
+        int n = s.Length - 1;
+        char temp;
+        for (int i = 0; i < c.Length; i++)
+        {
+            if (vowels.Contains(c[i]))
+            {
+                while (n > i)
+                {
+                    if (vowels.Contains(c[n]))
+                    {
+                        temp = c[i];
+                        c[i] = c[n];
+                        c[n] = temp;
+                        n--;
+                        break;
+                    }
+                    n--;
+                }
+            }
         }
+        s = new string(c);
+        return s;
     }
 }
 
