--- a/2341. Maximum Number of Pairs in Array.md
+++ b/2341. Maximum Number of Pairs in Array.md
@@ -48,3 +48,56 @@ Constraints:
 1 <= nums.length <= 100
 
 0 <= nums[i] <= 100
+
+```csharp
+
+Solution 1:
+
+    public class Solution
+    {
+        public int[] NumberOfPairs(int[] nums)
+        {
+            int pairs = 0;
+            for (int i = 0; i < nums.Length - 1; i++)
+            {
+                if (nums[i] < 0)
+                {
+                    continue;
+                }
+                for (int j = i + 1; j < nums.Length; j++)
+                {
+                    if (nums[i] == nums[j])
+                    {
+                        pairs++;
+                        nums[j] = -1;
+                        break;
+                    }
+                }
+            }
+            return new int[] { pairs, nums.Length - (2 * pairs) };
+        }
+    }
+
+Solution 2:
+
+    public class Solutionm
+    {
+        public int[] NumberOfPairs(int[] nums)
+        {
+            Array.Sort(nums);
+            int pairs = 0;
+            for (int i = 0; i < nums.Length - 1; i++)
+            {
+                if (nums[i] == nums[i + 1])
+                {
+                    pairs++;
+                    i++;
+                }
+            }
+            return new int[] { pairs, nums.Length - (2 * pairs) };
+        }
+    }
+
+```
+
+
